# traffic-monitor

./: CLAUDE.md  Cargo.toml  README.md  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
actions/: shutdown.py
config/: settings.py  settings.toml  settings.yaml
data_providers/: vnstat_provider.py  vnstat_provider_test.py
monitors/: traffic_monitor.py
notifiers/: discord_notifier.py  discord_notifier_test.py  email_notifier.py  email_notifier_test.py
src/: action.rs  config.rs  data_provider.rs  main.rs  monitor.rs  notifier.rs  state_manager.rs
traffic_monitor/: __init__.py  cli.py  state_manager.py
traffic_monitor/actions/: shutdown.py
traffic_monitor/config/: settings.py
traffic_monitor/data_providers/: vnstat_provider.py  vnstat_provider_test.py
traffic_monitor/monitors/: traffic_monitor.py
traffic_monitor/notifiers/: discord_notifier.py  discord_notifier_test.py  email_notifier.py  email_notifier_test.py
