[package]
name = "traffic_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "hostname", "builder"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

