[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-monitor"
version = "1.0.0"
description = "A Python application that monitors network traffic usage and prevents excessive data transfer costs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Traffic Monitor Team", email = "traffic-monitor@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["traffic", "monitoring", "vnstat", "bandwidth", "cloud", "aws", "discord", "email"]
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "requests>=2.25.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/faker2048/traffic-monitor"
Repository = "https://github.com/faker2048/traffic-monitor"
Issues = "https://github.com/faker2048/traffic-monitor/issues"

[project.scripts]
traffic-monitor = "traffic_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["traffic_monitor*"]

[tool.setuptools.package-data]
traffic_monitor = ["templates/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true